# Dotfiles

./: .gitignore  README.md  setup.sh
VSCodium/: .gitignore  build_package.py  build_theme.py  build_themes.py  extensions.txt  package.json  setup.sh  update_themes.py
VSCodium/config/: keybindings.json  settings.json
VSCodium/themes/: oxocarbon-color-theme.json  tokyo-carbon-color-theme.json  tokyo-night-color-theme.json
awww/: setup.sh
bash/: .gitignore  bash_aliases.sh  bash_completions.sh  bash_env.sh  bash_functions.sh  bash_profile.sh  bashrc.sh  setup.sh
bash/default/: bash_aliases.sh  bash_completions.sh  bash_env.sh  bash_functions.sh
btop/: btop.conf  setup.sh
configs/: config_main.jsonc  config_shitty.jsonc
dunst/: dunstrc
elysean_themes/: .gitignore  active_theme.lua  set_theme.py  setup.sh
elysean_themes/default/: Oxocarbon.toml  TokyoNight.conf  TokyoNight.toml  WitcherTokyoNight.conf
elysean_themes/templates/: codium.json  kitty.conf  starship.toml  yazi.toml
elysian_themes/: .gitignore  set_theme.py  setup.sh
elysian_themes/templates/: codium.json  fastfetch.json  kitty.conf  starship.toml  yazi.toml
eww/: .gitignore  Makefile  eww.scss  eww.yuck  setup.sh
eww/config/: theme1.yuck  theme2.yuck  theme3.yuck
eww/scripts/: calendar.sh  get_datetime.sh  lock.sh  menuctl.sh  music.sh  pmusic.sh  usrctl.sh  wifi-delay.sh  wifictl.sh  workspace_scroll.sh
eww/src/: battery.c  clock.c  daemon_workspace.c  get_apps.c  get_battery.c  get_brightness.c  get_cpu_usage.c  get_datetime.c  get_disk_usage.c  get_netinfo.c  get_netlist.c  get_network.c  get_ram.c  get_ram_usage.c  get_temp.c  get_volume.c  get_workspace.c  set_brightness.c  set_volume.c  set_workspace.c
eww/style/: theme1.scss  theme2.scss
fastfetch/: .gitignore  config.jsonc  setup.sh
hypr/: .gitignore  hyprland.conf  hyprland.lua  hyprpaper.conf  setup.sh
hypr/default/: autostart.conf  autostart.lua  env.conf  env.lua  input.conf  input.lua  keybinds.conf  keybinds.lua  look-and-feel.conf  look_and_feel.lua  monitors.conf  monitors.lua  settings.conf  variables.conf  variables.lua  windowrules.conf  windowrules.lua
kitty/: .gitignore  kitty.conf  setup.sh
nvim/: init.lua  lazy-lock.json  setup.sh
nvim/lua/: keymaps.lua  lsp.lua  options.lua
quickshell/: .gitignore  ActiveTheme.qml  CMakeLists.txt  README.md  build.sh  setup.sh  shell.qml
quickshell/modules/: ElysianFrame.qml
quickshell/modules/Blobs/: CMakeLists.txt  blobgroup.cpp  blobgroup.hpp  blobinvertedrect.cpp  blobinvertedrect.hpp  blobmaterial.cpp  blobmaterial.hpp  blobrect.cpp  blobrect.hpp  blobshape.cpp  blobshape.hpp  screenframeitem.cpp  screenframeitem.hpp
quickshell/modules/Blobs/include/: blobgroup.hpp  blobinvertedrect.hpp  blobmaterial.hpp  blobrect.hpp  blobshape.hpp
quickshell/modules/Blobs/src/: blobgroup.cpp  blobinvertedrect.cpp  blobmaterial.cpp  blobrect.cpp  blobshape.cpp
quickshell/modules/Services/: CMakeLists.txt
quickshell/modules/Services/Bluetooth/: BluetoothService.cpp  BluetoothService.hpp  CMakeLists.txt
quickshell/modules/Services/CursorPosition/: CMakeLists.txt  CursorPositionService.cpp  CursorPositionService.hpp
quickshell/modules/Services/Network/: CMakeLists.txt  NetworkService.cpp  NetworkService.hpp
quickshell/modules/Services/Notification/: CMakeLists.txt  NotificationService.qml
quickshell/modules/Themes/: ActiveTheme.qml  CMakeLists.txt
quickshell/scripts/: init_notif_log.sh  parse_color_themes.sh
quickshell/scripts/bluetooth/: dualsense.sh  headset.sh
quickshell/services/: Bluetooth.cpp  Bluetooth.hpp  CursorPosition.cpp  CursorPosition.hpp  WiFi.cpp  WiFi.hpp
quickshell/services/Bluetooth/: BluetoothService.cpp  BluetoothService.hpp  CMakeLists.txt
quickshell/services/CursorPosition/: CMakeLists.txt  CursorPositionService.cpp  CursorPositionService.hpp
quickshell/services/Network/: CMakeLists.txt  Network.cpp  Network.hpp  NetworkService.cpp  NetworkService.hpp
quickshell/services/Notification/: NotificationService.qml  qmldir
quickshell/services/ScreenFrame/: CMakeLists.txt  ScreenFrameItem.cpp  ScreenFrameItem.hpp
quickshell/themes/: ActiveTheme.qml  ThemeLoader.qml  WitcherTokyoNight.qml  qmldir
quickshell/themes/default/: WitcherTokyoNight.conf  WitcherTokyoNight.qml  qmldir
quickshell/themes/user/: Foo.qml  qmldir
quickshell/widgets/: AppLauncher.qml  BluetoothLauncher.qml  ControlCenter.qml  ControlDrawer.qml  DrawerLauncher.qml  GlobalLauncher.qml  LockScreen.qml  NotificationDisplay.qml  NotificationPopup.qml  QuickAppsMenu.qml  ScreenFrame.qml  SessionMenu.qml  SystemMenu.qml  ThemeLoader.qml  TrayMenu.qml  Wallpaper.qml
quickshell/widgets/Launcher/: AppLauncher.qml  BluetoothLauncher.qml
quickshell/widgets/Launcher/Base/: Entry.qml  Launcher.qml  qmldir
quickshell/widgets/base/: Drawer.qml  NotificationCard.qml  OrbitMenu.qml  SearchView.qml  qmldir
quickshell/widgets/base/donut/: DonutEntry.qml  DonutMenu.qml  qmldir
quickshell/widgets/base/drawer/: Drawer.qml  qmldir
quickshell/widgets/base/launcher/: Launcher.qml  LauncherEntry.qml  LauncherMenu.qml  ResultList.qml  SearchBar.qml  qmldir
quickshell/widgets/base/notification/: NotificationCard.qml  qmldir
quickshell/widgets/base/orbit/: OrbitEntry.qml  OrbitEntrySet.qml  OrbitMenu.qml  qmldir
quickshell/widgets/base/pie/: PieEntry.qml  PieMenu.qml  qmldir
rofi/: config.rasi
scripts/: toggle_theme.sh
starship/: .gitignore  setup.sh  starship.toml
swayosd/: colors.css  config.toml  style.css
themes/: theme_pill_circles.css
vim/: .netrwhist  coc-settings.json  mappings.vim  plugins.vim  vimrc.vim
vscodium/: .gitignore  build_config.py  build_package.py  build_theme.py  setup.sh
waybar/configs/: config_main.jsonc
waybar/scripts/: reload_theme.sh  workspace_scroll.sh
waybar/themes/: theme_full_circles.css  theme_shitty.css
wlogout/: style.css
yazi/: .gitignore  keymap.toml  setup.sh  yazi.toml
zsh/: setup.sh  zprofile.zsh  zshenv.zsh  zshrc.zsh
zsh/default/: alias.zsh  completions.zsh  env.zsh  functions.zsh  main.zsh  (+1 more)
(+10 files in other folders)
